# online-production

./: .bandit  .base44rc.enhanced.json  .base44rc.json  .base44rc.minimal.json  .base44rc.production.json  .base44rc.simple.json  .editorconfig  .env.backup.20250915_200913  .env.development  .env.example  .env.production.secure  .env.production.template  .env.runtime  .env.runtime.example  .flake8  .gitignore  .last_base44_sync  .pre-commit-config.yaml  .prettierrc.json  .pylintrc  .ruff.toml  .rule1_ignore  .safety-policy.json  <src.services.registry.ServiceRegistry object at 0x1073a9220>  <src.services.registry.ServiceRegistry object at 0x1073d0ad0>  <src.services.registry.ServiceRegistry object at 0x107404260>  AI_PLATFORM_INTEGRATION_PLAN.md  ALERTING_SETUP_GUIDE.md  API_REGISTRATION_COMPLETE.md  API_REGISTRATION_STATUS.md  ARCHITECTURAL_MAP.md  CHATGPT_INTEGRATION_GUIDE.md  CHATGPT_INTEGRATION_RULES.md  CHAT_IMPROVEMENTS_DOCUMENTATION.md  CHECKPOINT_CLEANUP_2025-08-28.md  CHECKPOINT_TRAE_RULES_2025-08-28.md  CLEAN_ARCHITECTURE_DESIGN.md  CODEBASE_ANALYSIS_REPORT.md  COMPLETE_API_REGISTRATION_GUIDE.md  COMPLETE_FILE_TREE.md  (+487 more)
data/: .salt  (+5 more)
trae_production_ready/: .gitignore  Makefile  init_db.py  pyproject.toml  pyrightconfig.json  run.sh
trae_production_ready/app/: main.py
trae_production_ready/app/core/: config.py  config.py.bak_colon  database.py
trae_production_ready/app/models/: __init__.py  base.py  user.py
trae_production_ready/app/repositories/: user_repo.py
trae_production_ready/infra/: docker-compose.yml
trae_production_ready/tests/: test_health.py
(+3376 files in other folders)
